[package]
name = "k9-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
envy = "0.4.2"
serde = "1.0.171"
serenity = { version = "0.11.6", features = ["builder", "client", "gateway", "model", "native_tls_backend"], default-features = false }
tokio = { version = "1.0.0", features = ["rt-multi-thread", "macros", "signal"] }
